// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TemplateStageSpecifications /> tests snapshot test with error 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main serviceOverrides StyledProps--background-form"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main contentSection"
    >
      <div
        class="template-bar"
      />
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="bp3-card bp3-elevation-0 Card--card sectionCard"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="templateStageOverview_identifier"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      Id
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          Stage_1
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="templateStageOverview_name"
                    >
                      stageNameLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="Stage 1"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main inputsContainer"
            >
              <div
                class="StyledProps--font StyledProps--main"
                style="height: 300px;"
              >
                <div
                  class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center"
                  style="width: 100%; height: 100%;"
                >
                  <div
                    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                    style="align-items: center; width: 500px;"
                  >
                    <span
                      class="bp3-icon bp3-icon-error StyledProps--main StyledProps--color StyledProps--color-red500"
                      icon="error"
                    >
                      <svg
                        data-icon="error"
                        height="32"
                        viewBox="0 0 20 20"
                        width="32"
                      >
                        <desc>
                          error
                        </desc>
                        <path
                          d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 16H9v-2h2v2zm0-3H9V4h2v9z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-align-center StyledProps--color StyledProps--color-red500"
                    >
                      Template to fetch template inputs does not exist.
                    </p>
                    <button
                      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        Retry
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TemplateStageSpecifications /> tests snapshot test with no template inputs 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main serviceOverrides StyledProps--background-form"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main contentSection"
    >
      <div
        class="template-bar"
      />
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="bp3-card bp3-elevation-0 Card--card sectionCard"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="templateStageOverview_identifier"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      Id
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          Stage_1
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="templateStageOverview_name"
                    >
                      stageNameLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="Stage 1"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main inputsContainer"
            />
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TemplateStageSpecifications /> tests snapshot test with template inputs 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main serviceOverrides StyledProps--background-form"
    style="height: 100%;"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-xlarge StyledProps--main contentSection"
    >
      <div
        class="template-bar"
      />
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="bp3-card bp3-elevation-0 Card--card sectionCard"
            >
              <div
                class="InputWithIdentifier--txtNameContainer TextInput--main"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="templateStageOverview_identifier"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                    >
                      Id
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main"
                  >
                    :
                  </p>
                  <span
                    class="bp3-popover-wrapper"
                  >
                    <span
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                      >
                        <span
                          class="bp3-editable-text-content"
                          style="height: 1px; line-height: 1px; min-width: 0;"
                        >
                          Stage_1
                        </span>
                      </div>
                    </span>
                  </span>
                </div>
                <div
                  class="bp3-form-group"
                  data-id="name-0"
                >
                  <label
                    class="bp3-label"
                    for="name"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="templateStageOverview_name"
                    >
                      stageNameLabel
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-input-group"
                    >
                      <input
                        autocomplete="off"
                        class="bp3-input"
                        name="name"
                        type="text"
                        value="Stage 1"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="StyledProps--font StyledProps--main inputsContainer"
            >
              <div
                class="Layout--vertical Layout--layout-spacing-large StyledProps--main StyledProps--margin-top-medium StyledProps--padding-top-large StyledProps--padding-bottom-large"
              >
                <h5
                  class="StyledProps--font StyledProps--font-h5 StyledProps--main StyledProps--color StyledProps--color-black"
                  level="5"
                >
                  pipeline.templateInputs
                </h5>
                <div
                  id="Stage.Stage_1"
                >
                  <div
                    class="topAccordion stageCard"
                  >
                    <div
                      class="accordionSummary"
                      id="Stage.Stage_1.Service"
                    >
                      <div
                        class="inputheader"
                      >
                        service
                      </div>
                      <div
                        class="nestedAccordions"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                          style="align-items: center;"
                        >
                          <div
                            class="bp3-form-group inputWidth"
                          >
                            <label
                              class="bp3-label"
                              for="template.templateInputs.spec.serviceConfig.serviceRef"
                            >
                              <span
                                class="Tooltip--acenter"
                                data-tooltip-id="specifyYourService"
                              >
                                cd.pipelineSteps.serviceTab.specifyYourService
                              </span>
                               
                              <span
                                class="bp3-text-muted"
                              />
                            </label>
                            <div
                              class="bp3-form-content"
                            >
                              <div
                                class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                              >
                                <div
                                  class="TextInput--main MultiTypeInput--input"
                                >
                                  <div
                                    class="bp3-input-group bp3-disabled"
                                  >
                                    <input
                                      class="bp3-input"
                                      disabled=""
                                      name="template.templateInputs.spec.serviceConfig.serviceRef"
                                      placeholder="<+input>"
                                      type="text"
                                      value="<+input>"
                                    />
                                  </div>
                                </div>
                                <span
                                  class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                >
                                  <span
                                    class="bp3-popover-target"
                                  >
                                    <button
                                      class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                                    >
                                      <span
                                        class="bp3-icon StyledProps--main"
                                        data-icon="runtime-input"
                                      >
                                        <svg
                                          height="12"
                                          viewBox="0 0 10 7.97"
                                          width="12"
                                          xmlns="http://www.w3.org/2000/svg"
                                        >
                                          <path
                                            d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                            fill="current-color"
                                          />
                                        </svg>
                                      </span>
                                    </button>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          class="Layout--vertical Layout--layout-spacing-medium StyledProps--main"
                        />
                      </div>
                    </div>
                    <div
                      class="accordionSummary"
                      id="Stage.Stage_1.Infrastructure"
                    >
                      <div
                        class="inputheader"
                      >
                        infrastructureText
                      </div>
                      <div
                        class="nestedAccordions infraSection"
                      />
                      <div
                        class="nestedAccordions"
                      >
                        <div
                          class="Layout--vertical Layout--layout-spacing-small StyledProps--main containerPadding StyledProps--padding-medium"
                        >
                          <div
                            class="formGroup md"
                          >
                            <div
                              class="bp3-form-group"
                            >
                              <label
                                class="bp3-label"
                                for="template.templateInputs.spec.infrastructure.infrastructureDefinition.spec.namespace"
                              >
                                <span
                                  class="Tooltip--acenter"
                                  data-tooltip-id="templateStageOverview_template.templateInputs.spec.infrastructure.infrastructureDefinition.spec.namespace"
                                >
                                  common.namespace
                                </span>
                                 
                                <span
                                  class="bp3-text-muted"
                                />
                              </label>
                              <div
                                class="bp3-form-content"
                              >
                                <div
                                  class="Layout--horizontal StyledProps--main MultiTypeInput--main MultiTypeInput--disabled"
                                >
                                  <div
                                    class="TextInput--main MultiTypeInput--input"
                                  >
                                    <div
                                      class="bp3-input-group bp3-disabled"
                                    >
                                      <input
                                        class="bp3-input"
                                        disabled=""
                                        name="template.templateInputs.spec.infrastructure.infrastructureDefinition.spec.namespace"
                                        placeholder="<+input>"
                                        type="text"
                                        value="<+input>"
                                      />
                                    </div>
                                  </div>
                                  <span
                                    class="bp3-popover-wrapper MultiTypeInput--wrapper"
                                  >
                                    <span
                                      class="bp3-popover-target"
                                    >
                                      <button
                                        class="MultiTypeInput--btn MultiTypeInput--RUNTIME"
                                      >
                                        <span
                                          class="bp3-icon StyledProps--main"
                                          data-icon="runtime-input"
                                        >
                                          <svg
                                            height="12"
                                            viewBox="0 0 10 7.97"
                                            width="12"
                                            xmlns="http://www.w3.org/2000/svg"
                                          >
                                            <path
                                              d="M8.14 4L8 3.72a2.53 2.53 0 01-.12-.3l-.16-.35c-.11-.25-.22-.38-.32-.38s-.28.15-.37.44C7 3.1 7 3.07 7 3a.73.73 0 01.24-.46.66.66 0 01.42-.26c.25 0 .5.35.76 1.05l.07.17.07-.12c.47-.73.86-1.1 1.18-1.1a.71.71 0 01.29.07l-.4.42h-.11c-.24 0-.52.28-.86.83l-.09.16.07.2c.29.79.53 1.18.71 1.18s.31-.12.4-.36q.09.06.09.12t-.27.39a.74.74 0 01-.45.23c-.25 0-.51-.36-.77-1.07l-.12-.25-.1.17c-.44.76-.87 1.14-1.28 1.14a.65.65 0 01-.39-.12L6.84 5a.32.32 0 00.23.1c.25 0 .53-.25.83-.74l.17-.28zm-4-.32L1.7.59h2.47S5 .52 5.35 1a3.28 3.28 0 01.42 1.14h.31L5.94 0H0v.31l3.06 3.74L0 7.62V8h6.08l.38-2.36-.31-.07a2.43 2.43 0 01-.52 1c-.42.48-2 .41-2 .41H1.39z"
                                              fill="current-color"
                                            />
                                          </svg>
                                        </span>
                                      </button>
                                    </span>
                                  </span>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
